package org.example;

public enum SusceptibleGroup {
    INFANTS,
    CHILDREN,
    YOUNGADULTS,
    ELDERLY,
    PREGNANT,
    UNVACCINATED,
    IMMUNOCOMPROMISED,
    OBESE,
    LUNGHEARTDISEASE,
    DIABETES,
    SMOKERS
}
